--- a/src/components/ImageGallery/ImageGallery.module.css
+++ b/src/components/ImageGallery/ImageGallery.module.css
@@ -2,8 +2,9 @@
   display: grid;
   max-width: calc(100vw - 48px);
   grid-template-columns: repeat(auto-fill,minmax(320px,1fr));
-  grid-gap: 16px;
+  grid-gap: 15px;
   padding: 0;
   list-style: none;
   margin: 0 auto;
+  padding-top: 15px;
 }
