--- a/src/components/ImageGallery/ImageGallery.module.css
+++ b/src/components/ImageGallery/ImageGallery.module.css
@@ -1,7 +1,10 @@
-.list{
+.list {
   display: grid;
   max-width: calc(100vw - 48px);
-  grid-template-columns: repeat(auto-fill,minmax(320px,1fr));
+  grid-template-columns: repeat(
+    auto-fill,
+    minmax(320px, 1fr)
+  );
   grid-gap: 15px;
   padding: 0;
   list-style: none;
